[package]
name = "claude-commander"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
ratatui-hypertile = "0.3"
ratatui-hypertile-extras = { version = "0.3", features = ["crossterm"] }
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
arboard = "3"
